fix: Update template loading logic to check for locale-specific templates in mail-templates directory